akscluster/provision/manifests/nginx-test/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  # type: LoadBalancer
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
