akscluster/provision/manifests/nginx-test/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - __app_fqdn__
      secretName: __app_name__-tls
  rules:
    - host: __app_fqdn__
      http:
        paths:
          - path: "/nginx"
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
